--- a/dev/index.html
+++ b/dev/index.html
@@ -2,11 +2,69 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Hostel</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	
+<!-- HEADER -->
+<header>
+	<div class="container header">
+		<div class="row">
+			<div class="col-md-3 adres"><span>г.Владимир, ул.Дворянская, 11а</span></div>
+			<div class="col-md-6 logo">Храповицкий<br><span>хостел</span></div>
+			<div class="col-md-3 tel"><i class="fa fa-phone"></i> +7(4922) <span>30-41-65</span><span class="lang active">RU</span><span class="lang">EN</span></div>
+		</div>
+	</div>
+</header>
+<!-- HEADER -->
+<div class="container nav-bar">
+	<div class="row">
+		
+			<ul>
+				<li>
+					<a href="">О нас</a>
+				</li>
+				<li class="divid"><span></span></li>
+				<li>	
+					<a href="">Номера</a>
+				</li>	
+				<li class="divid"><span></span></li>
+				<li>
+					<a href="">Бронирование</a>
+				</li>
+				<li class="divid"><span></span></li>	
+				<li>	
+					<a href="">Групповое размещение</a>
+				</li>
+				<li class="divid"><span></span></li>	
+				<li>	
+					<a href="">Услуги</a>
+				</li>
+				<li class="divid"><span></span></li>	
+				<li>	
+					<a href="">Контакты</a>
+				</li>
+			</ul>
+		
+	</div>
+</div>
+<!-- NAVBAR -->	
+
+<!-- SLIDER -->
+<div class="container-fluid">
+	<div class="row">
+	<div class="check-in">
+	 <div class="container">
+	    <div class="check-in_content">
+	        <div class="check-in_content_forma"></div>	    	
+	    </div>
+	 </div>
+	</div> 
+	</div>
+</div>	
+<!-- SLIDER -->
 
 <script src="libs/jquery/dist/jquery.min.js"></script>
 <script src="libs/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
