--- a/dev/index.html
+++ b/dev/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=PT+Serif:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <!-- HEADER -->
@@ -61,11 +62,24 @@
 <div class="container-fluid">
 	<div class="row">
 	<div class="check-in">
-	 <div class="container">
-	    <div class="check-in_content">
-	        <div class="check-in_content_forma"></div>	    	
+	 
+	    <div class="description">
+	      	<div class="container">
+	      		<div class="h1">Европейский хостел в историческом центре Владимира</div>
+	      		<div class="h2">Номера от <b>500 рублей</b> в сутки</div>
+	      		<div class="h2">Недалеко от Вокзала. Рядом с достопримечательностями. Большой завтрак.</div>
+	      	</div>
 	    </div>
-	 </div>
+	    <div class="description_icons">
+	      	<div class="container">
+	      		<div class="row">
+	      			<div class="col-md-4">Что за хостел?</div>
+	      			<div class="col-md-4">Что рядом?</div>
+	      			<div class="col-md-4">Как добраться?</div>
+	      		</div>
+	      	</div>
+	    </div>
+	 
 	</div> 
 	</div>
 </div>	
