--- a/dev/index.html
+++ b/dev/index.html
@@ -85,6 +85,44 @@
 </div>	
 <!-- SLIDER -->
 
+<!-- НОМЕРА -->
+<div class="rooms">
+<div class="container">
+	<div class="row">
+	    <div class="h2">Номера</div>
+	    <p class="center-block">Бронируя номер в нашем хостеле, Вы получаете не только комфортное проживание, но и ряд приятных бонусов!</p>
+		<div class="col-md-4">
+			<div><img src="img/nomer1.jpg" class="img-responsive" alt=""></div>
+			<div class="rooms_number">Номер 1 <br> <span class="rooms_price">500 <i class="fa fa-rub"></i></span></div>
+		</div>
+		<div class="col-md-4">
+			<div><img src="img/nomer2.jpg" class="img-responsive" alt=""></div>
+			<div class="rooms_number">Номер 2 <br> <span class="rooms_price">600 <i class="fa fa-rub"></i></span></div>
+		</div>
+		<div class="col-md-4">
+			<div><img src="img/nomer3.jpg" class="img-responsive" alt=""></div>
+			<div class="rooms_number">Номер 3 <br> <span class="rooms_price">700 <i class="fa fa-rub"></i></span></div>
+		</div>
+	</div>
+	<div class="row">
+	    
+		<div class="col-md-4">
+			<div><img src="img/nomer1.jpg" class="img-responsive" alt=""></div>
+			<div class="rooms_number">Номер 1 <br> <span class="rooms_price">500 <i class="fa fa-rub"></i></span></div>
+		</div>
+		<div class="col-md-4">
+			<div><img src="img/nomer2.jpg" class="img-responsive" alt=""></div>
+			<div class="rooms_number">Номер 2 <br> <span class="rooms_price">600 <i class="fa fa-rub"></i></span></div>
+		</div>
+		<div class="col-md-4">
+			<div><img src="img/nomer3.jpg" class="img-responsive" alt=""></div>
+			<div class="rooms_number">Номер 3 <br> <span class="rooms_price">700 <i class="fa fa-rub"></i></span></div>
+		</div>
+	</div>
+</div>
+</div>
+<!-- НОМЕРА -->
+
 <script src="libs/jquery/dist/jquery.min.js"></script>
 <script src="libs/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
 </body>
