--- a/dev/index.html
+++ b/dev/index.html
@@ -123,6 +123,64 @@
 </div>
 <!-- НОМЕРА -->
 
+<!-- FEATURES -->
+<div class="container features">
+	<h2>В стоимость проживания включено</h2>
+	<div class="row">
+		<div class="col-md-2">
+			<div class="features_icon"><img src="img/i1.png" alt="" class="img-responsive center-block"></div>
+			<div class="features_text">Завтраки</div>
+		</div>
+		<div class="col-md-2">
+			<div class="features_icon"><img src="img/i2.png" alt="" class="img-responsive center-block"></div>
+			<div class="features_text">Горячий душ</div>
+		</div>
+		<div class="col-md-2">
+			<div class="features_icon"><img src="img/i3.png" alt="" class="img-responsive center-block"></div>
+			<div class="features_text">Полотенца и белье</div>
+		</div>
+		<div class="col-md-2">
+			<div class="features_icon"><img src="img/i4.png" alt="" class="img-responsive center-block"></div>
+			<div class="features_text">Кухня</div>
+		</div>
+		<div class="col-md-2">
+			<div class="features_icon"><img src="img/i5.png" alt="" class="img-responsive center-block"></div>
+			<div class="features_text">Free Wi-Fi</div>
+		</div>
+		<div class="col-md-2">
+			<div class="features_icon"><img src="img/i6.png" alt="" class="img-responsive center-block"></div>
+			<div class="features_text">Гостевой компьютер</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-2">
+			<div class="features_icon"><img src="img/i7.png" alt="" class="img-responsive center-block"></div>
+			<div class="features_text">24/7 ресепшн</div>
+		</div>
+		<div class="col-md-2">
+			<div class="features_icon"><img src="img/i8.png" alt="" class="img-responsive center-block"></div>
+			<div class="features_text">Хранение багажа</div>
+		</div>
+		<div class="col-md-2">
+			<div class="features_icon"><img src="img/i9.png" alt="" class="img-responsive center-block"></div>
+			<div class="features_text">Телевизор</div>
+		</div>
+		<div class="col-md-2">
+			<div class="features_icon"><img src="img/i10.png" alt="" class="img-responsive center-block"></div>
+			<div class="features_text">Карта города</div>
+		</div>
+		<div class="col-md-2">
+			<div class="features_icon"><img src="img/i11.png" alt="" class="img-responsive center-block"></div>
+			<div class="features_text">Настольные игры</div>
+		</div>
+		<div class="col-md-2">
+			<div class="features_icon"><img src="img/i12.png" alt="" class="img-responsive center-block"></div>
+			<div class="features_text">Локеры</div>
+		</div>
+	</div>
+</div>
+<!-- FEATURES -->
+
 <script src="libs/jquery/dist/jquery.min.js"></script>
 <script src="libs/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
 </body>
