--- a/dev/index.html
+++ b/dev/index.html
@@ -66,7 +66,7 @@
 	    <div class="description">
 	      	<div class="container">
 	      		<div class="h1">Европейский хостел в историческом центре Владимира</div>
-	      		<div class="h2">Номера от <b>500 рублей</b> в сутки</div>
+	      		<div class="h2">Номера от <b>500</b> рублей в сутки</div>
 	      		<div class="h2">Недалеко от Вокзала. Рядом с достопримечательностями. Большой завтрак.</div>
 	      	</div>
 	    </div>
@@ -180,6 +180,15 @@
 	</div>
 </div>
 <!-- FEATURES -->
+
+<!-- MAP -->
+<div class="container-fluid map">
+	<div class="row">
+		<h2>Расположение хостела</h2>
+		<script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=qnghkP4W_wvwMGKITCXQ_h-IQKXUOdZo&width=auto&height=350"></script>
+	</div>
+</div>
+<!-- MAP -->
 
 <script src="libs/jquery/dist/jquery.min.js"></script>
 <script src="libs/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
