--- a/dev/index.html
+++ b/dev/index.html
@@ -190,6 +190,13 @@
 </div>
 <!-- MAP -->
 
+<!-- FOOTER -->
+<footer class="container-fluid">
+	<div class="row">
+	</div>
+</footer>
+<!-- FOOTER -->
+
 <script src="libs/jquery/dist/jquery.min.js"></script>
 <script src="libs/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
 </body>
