--- a/dev/index.html
+++ b/dev/index.html
@@ -185,7 +185,9 @@
 <div class="container-fluid map">
 	<div class="row">
 		<h2>Расположение хостела</h2>
+		<div class="map_yandex">
 		<script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=qnghkP4W_wvwMGKITCXQ_h-IQKXUOdZo&width=auto&height=350"></script>
+		</div>
 	</div>
 </div>
 <!-- MAP -->
