--- a/dev/index.html
+++ b/dev/index.html
@@ -182,21 +182,52 @@
 <!-- FEATURES -->
 
 <!-- MAP -->
-<div class="container-fluid map">
+<!-- <div class="container-fluid map">
 	<div class="row">
 		<h2>Расположение хостела</h2>
 		<div class="map_yandex">
 		<script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=qnghkP4W_wvwMGKITCXQ_h-IQKXUOdZo&width=auto&height=350"></script>
 		</div>
 	</div>
-</div>
+</div> -->
 <!-- MAP -->
 
 <!-- FOOTER -->
-<footer class="container-fluid">
-	<div class="row">
-	</div>
+<footer class="footer">
+  <div class="container">
+	<!-- <div class="row">
+			<div class="col-md-3">
+				<div class="footer_logo">Храповицкий<br><span>хостел</span></div>
+			</div>
+			<div class="col-md-3">
+				<ul>
+					<li><a href="">Как найти</a></li>
+					<li><a href="">Как найти</a></li>
+					<li><a href="">Как найти</a></li>
+					<li><a href="">Как найти</a></li>
+				</ul>
+			</div>
+			<div class="col-md-3">
+				<ul>
+					<li><a href="">Как найти</a></li>
+					<li><a href="">Как найти</a></li>
+					<li><a href="">Как найти</a></li>
+					<li><a href="">Как найти</a></li>
+				</ul>
+			</div>
+			<div class="col-md-3">
+				<ul>
+					<li><a href="">Как найти</a></li>
+					<li><a href="">Как найти</a></li>
+					<li><a href="">Как найти</a></li>
+					<li><a href="">Как найти</a></li>
+				</ul>
+			</div>
+		
+	</div> -->
+  </div>
 </footer>
+
 <!-- FOOTER -->
 
 <script src="libs/jquery/dist/jquery.min.js"></script>
